--- a/style.css
+++ b/style.css
@@ -8,19 +8,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -28,49 +96,179 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
 
+/* 顏色 */
+:root {
+	--primary-100: #F5FEE7;
+	--primary-400: #57A203;
+
+	--neutral-0: #FFFFFF;
+	--neutral-100: #F8F9FA;
+	--neutral-300: #DEE2E6;
+	--neutral-600: #6C757D;
+	--neutral-900: #212529;
+}
+
 /* 標籤基本樣式 */
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 /* 中間對齊，清除圖片下方的空白 */
 img {
-    vertical-align: middle; 
+	vertical-align: middle;
 }
 
 a {
-    color: #57A203;
-    text-underline-offset: 4px;
-    display: block;
+	color: var(--primary-400);
+	text-underline-offset: 4px;
+	display: block;
 }
 
 body {
-    font-family: "Noto Sans TC", sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.05em;
+	font-family: "Noto Sans TC", sans-serif;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.05em;
+	color: var(	--neutral-900);
+}
+
+/* 通用樣式 */
+.container {
+	width: 856px;
+	margin: 0 auto;
+}
+
+.h1 {
+	font-size: 48px;
+	line-height: 1.2;
+	font-weight: 700;
+}
+
+.h3 {
+	font-size: 28px;
+	line-height: 1.2;
+	font-weight: 700;
+}
+
+.h4 {
+	font-size: 24px;
+	line-height: 1.2;
+	font-weight: 700;
+}
+
+.h5 {
+	font-size: 20px;
+	line-height: 1.2;
+	font-weight: 700;
+}
+
+.text-sm {
+	font-size: 14px;
+	font-weight: 400;
+}
+
+.text-white {
+	color: var(--neutral-0);
+}
+
+.text-neutral-600 {
+	color: var(--neutral-600);
+}
+
+.text-primary-400 {
+	color: var(--primary-400);
+}
+
+.bg-primary-100 {
+	background-color: var(--primary-100);
+}
+
+.bg-neutral-100 {
+	background-color: var(--neutral-100);
+}
+.p-32 {
+	padding: 32px;
+}
+
+.py-8 {
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+
+.py-64 {
+	padding-top: 64px;
+	padding-bottom: 64px;
+}
+
+.pb-48 {
+	padding-bottom: 48px;
+}
+
+.pr-8 {
+	padding-right: 8px;
+}
+
+.mb-4 {
+	margin-bottom: 4px;
+}
+
+.mb-12 {
+	margin-bottom: 12px;
+}
+
+.mb-16 {
+	margin-bottom: 16px;
+}
+
+.mb-24 {
+	margin-bottom: 24px;
+}
+
+.mb-48 {
+	margin-bottom: 48px;
 }
